Add /username/{username}/check endpoint
