# app/docs/swagger.json
@@ -260,6 +260,38 @@
                     }
                 }
             }
+        },
+        "/username/{username}/check": {
+            "get": {
+                "description": "Check if username exists",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Check if username exists",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BoolJson"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -268,6 +300,14 @@
             "properties": {
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "models.BoolJson": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "boolean"
                 }
             }
         },
