# app/models/general_results.go
@@ -1,0 +1,5 @@
+package models
+
+type BoolJson struct {
+	Result bool `json:"result"`
+}
